--- a/Werewolf_Server/build.xml
+++ b/Werewolf_Server/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="werewolf_server" default="default" basedir=".">
-    <description>Builds, tests, and runs the project werewolf_server.</description>
+<project name="Werewolf_Server" default="default" basedir=".">
+    <description>Builds, tests, and runs the project Werewolf_Server.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
@@ -58,7 +58,7 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="werewolf_server-impl.jar">
+        <target name="run" depends="Werewolf_Server-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
